--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -4,6 +4,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+.notfinished{
+  background-color: red;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
